[package]
name = "deno_plugin"
version = "0.1.0"
authors = ["Mathieu Broutin <mbroutin@sedona.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.47.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winnt", "wincontypes", "minwindef"] }
