[package]
name = "windows_terminal_plugin"
version = "0.1.0"
authors = ["Mathieu Broutin <mbroutin@sedona.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
deno_bindgen = "0.5.1"
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
win32console = "0.1.5"
winapi = { version = "0.3.9", features = ["wincon", "winnt", "wincontypes", "minwindef"] }
